--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,14 +2,17 @@ Package: lvm4net
 Title: Latent Variable Models for Networks
 Description: Latent variable models for network data using fast inferential
     procedures.
-Version: 0.1
-Author: Isabella Gollini
-Maintainer: Isabella Gollini <igollini.stats@gmail.com>
-Depends: R (>= 3.0.2), ergm, ellipse
+Version: 0.2
+Authors@R: person(given = "Isabella", family = "Gollini", role = c("aut","cre"), email = "igollini.stats@gmail.com")
+Depends: R (>= 3.1.1), MASS, ergm, network, ellipse
 Imports: igraph
 License: GPL (>= 2)
 LazyData: true
-Packaged: 2014-07-04 09:25:38 UTC; isagol
+URL: http://github.com/igollini/lvm4net
+BugReports: http://github.com/igollini/lvm4net/issues
+Packaged: 2015-04-10 20:48:57 UTC; isagol
+Author: Isabella Gollini [aut, cre]
+Maintainer: Isabella Gollini <igollini.stats@gmail.com>
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2014-07-04 13:39:23
+Date/Publication: 2015-04-11 01:00:42
